@@ -7,6 +7,7 @@ Legend:
 [BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.
 
 Version 0.3.4 - ??
+- [new] Add WFPagedPDOQuery to allow phocoa to paginate any SQL query via PDO. This is also used by Propel 1.3+ with a custom callback object as a modern replacement for WFPagedCreoleQuery.
 - [bugfix] Improve the default settings of buildModuleProgrammatically for WFYAHOO_widget_Module. Prevents Modules from being re-arranged on page once rendered.
 - [bugfix] Add html escaping to WFDieselKeyword.
 - [bugfix] Add encodeUriComponent() to WFYAHOO_widget_TreeView ajax methods so that nodeId's with '/' characters work.
